# churn-prediction-api

Api/: Dockerfile  pyproject.toml  requirements.txt
Api/Machine Learning/: Hotspots.ipynb  modeling.py
Api/api/: RidgeCVModel.pkl  XGBClassifier.pkl  main.py  preprocess.py
Front-End/: About.txt
Machine Learning/: About.txt  Hotspots.ipynb
Machine Learning/.ipynb_checkpoints/: Hotspots-checkpoint.ipynb
