[tool.poetry]
name = "Api"
version = "0.1.0"
description = ""
authors = ["Kobiri <kobiris1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pandas = "^1.4.2"
python-multipart = "^0.0.5"
joblib = "^1.1.0"
scikit-learn = "^1.1.1"
xgboost = "^1.6.1"
black = "^22.3.0"
isort = "^5.10.1"

[tool.isort]
line_length = 80
src_paths = ["scraping_proj"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
